<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupPetFragment">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tv_signuppet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/aclonica"
            android:text="@string/sign_up_your_pet"
            android:textColor="@color/Green"
            android:textSize="35sp"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:background="@drawable/countor_signuppet"
        android:backgroundTint="@color/Green"
        android:layout_margin="10dp"
        android:paddingTop="8dp"
        android:layout_below="@id/rl"
        android:columnCount="1"
        android:rowCount="7">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:hint="@string/name_pet"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:hint="@string/birthday_g_mm_aaaa"
            android:inputType="date"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:hint="@string/weight_kg"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:hint="@string/height_cm"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_chipnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:hint="@string/chip_number"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:hint="@string/gender_pet"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:hint="@string/breed"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            tools:ignore="TextContrastCheck" />
    </GridLayout>

    <Button
        android:id="@+id/button_sign_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grid_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up" />

</RelativeLayout>