<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlEditPet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPetActivity">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_below="@id/rlEditPet"
        android:layout_margin="10dp"
        android:background="@drawable/countor_signuppet"
        android:backgroundTint="@color/Green"
        android:columnCount="1"
        android:paddingTop="8dp"
        android:rowCount="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/name_pet"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/et_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/birthday_g_mm_aaaa"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/weight_kg"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/height_cm"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/et_chipNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/chip_number"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/et_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/gender_pet"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/et_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/tv_contour"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/breed"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

    </GridLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>