<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PetInformationFragment"
    android:layout_gravity="center"
    android:layout_centerInParent="true">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="340dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:columnCount="2"
        android:rowCount="3">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_vaccinations"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="25dp"
            android:elevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_vaccine2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/vaccines"
                    android:gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_medicines"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="25dp"
            android:elevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_medicine2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/medicines"
                    android:gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_visits"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="25dp"
            android:elevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_veterinarian" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/visits"
                    android:gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="25dp"
            android:elevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_backarrow" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/back"
                    android:gravity="center_horizontal|bottom"
                    android:layout_marginBottom="8dp"/>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </GridLayout>
</FrameLayout>

