<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/tv_contour_popup"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="5dp"
                    android:text="vaccine name"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tv_vax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/data_vaccinazione"
                        android:textColor="@color/dark_grey"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvVaccineDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_vax"
                        android:layout_centerInParent="true"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/date_1"
                        android:textColor="@color/dark_grey"
                        android:textSize="18sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tv_recall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/date_recall"
                        android:textColor="@color/dark_grey"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvRecallDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_recall"
                        android:layout_centerInParent="true"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/date_2"
                        android:textColor="@color/dark_grey"
                        android:textSize="18sp" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/linear_layout"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/deleteNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_close" />

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>